--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        
+        <a href="recipes/carbonara.html">Pasta Carbonara</a>
+
         <script src="" async defer></script>
     </body>
 </html>
