add carbonara ingredients and steps

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -8,9 +8,31 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>Carbonara Paste</h1>
-        <img src="../img/carbonara.webp"
+        <h1>Quick and Creamy Pasta Carbonara</h1>
 
-        <script src="" async defer></script>
+        <img width="640" height="480" src="../img/carbonara.webp">
+
+        <h3><p>This rich pasta toss is great for everyday dinners or special occasions. I can come home from work and throw this dish together in a half hour.</p></h3> 
+        <h3>Ingredients:</h3>
+        <ul>
+            <li>3 cups rigatoni pasta</li>
+            <li>6 slices bacon, diced</li>
+            <li>2 cloves garlic, minced</li>
+            <li>1 ¼ cups milk</li>
+            <li>1 (8 ounce) package cream cheese, cut into cubes</li>
+            <li>½ cup butter, softened</li>
+            <li>½ cup freshly shredded Parmesan cheese</li>
+            <li>¼ cup fresh green peas</li>
+            <li>¼ cup diced cooked ham</li>
+        </ul>
+        <h3>Diresctions</h3>
+        <h4>Step 1</h4>
+            <p>Bring a large pot of lightly salted water to a boil. Cook rigatoni in the boiling water, stirring occasionally until cooked through but firm to the bite, about 13 minutes. Drain.</p>
+        <h4>Step 2</h4>
+            <p>Meanwhile, place bacon in a large skillet and cook over medium-high heat, turning occasionally, until evenly browned, about 10 minutes.</p>
+            <p>Remove bacon with a slotted spoon, leaving drippings in pan; set bacon aside.</p>
+        <h4>Step 3</h4>    
+            <p>Cook and stir garlic in the remaining bacon grease over medium heat. Add milk, cream cheese, and butter to skillet; stir until smooth.</p>
+            <p>Stir Parmesan cheese, peas, ham, and bacon into cream cheese mixture; cook until peas are heated through, about 5 minutes more. Mix pasta into sauce to serve.</p>
     </body>
-</html>
+</html> 
