--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/carbonara.html">Pasta Carbonara</a>
+        <a href="recipes/carbonara.html">Quick and Creamy Pasta Carbonara</a>
 
         <script src="" async defer></script>
     </body>
