add ingredients and steps + step images

--- a/recipes/tenderloin.html
+++ b/recipes/tenderloin.html
@@ -9,6 +9,50 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        
+        <h1>Grilled Pork Tenderloin</h1>
+        <img width="640" height="480" src="../img/tenderloin.webp">
+        <h3>This grilled pork tenderloin is cooked over indirect heat and basted with barbecue sauce. My family loves when I make this recipe. The pork is always tender, juicy, and flavorful! Serve with additional barbecue sauce for dipping.</h3>
+        <h3>How to Grill Pork Tenderloin</h3>
+            <p>Ready to learn how to cook pork tenderloin on the grill? You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:</p>
+        <h3>Grilled Pork Tenderloin Seasonings</h3> 
+            <p>The pork tenderloin is simply seasoned with garlic powder, salt, and black pepper before grilling. While grilling, the pork is basted with barbecue sauce.</p>   
+        <h3>How to Make Pork Tenderloin On the Grill</h3>
+            <p>Here’s a brief overview of what you can expect when you cook pork tenderloin on the grill:</p>
+            <ol>
+                <li>Season the pork tenderloin.</li>
+                <li>Grill over medium, indirect heat and baste with sauce.</li>
+                <li>Let the grilled pork rest before slicing and serving.</li>
+            </ol>
+        <h3>How Long to Grill Pork Tenderloin</h3>    
+            <p>On a grill preheated to medium heat, the pork tenderloin should be fully cooked after about 30 minutes over indirect heat. You'll know the pork is done when an instant read thermometer inserted into the center reads at least 145 degrees F.</p>
+        <h3>How to Store Grilled Pork Tenderloin</h3>
+            <p>Store leftover grilled pork tenderloin in an airtight container in the refrigerator for up to three days. Reheat the pork in the oven or microwave until warmed through.</p>
+        <h3>Can You Freeze Grilled Pork Tenderloin?</h3>    
+            <p>Yes, you can freeze leftover grilled pork tenderloin for up to three months. Thaw in the refrigerator overnight before reheating in the oven or in the microwave.</p>
+        <h3>Ingredients</h3>                
+        <ul>
+            <li>2 (1 pound) pork tenderloins</li>
+            <li>1 teaspoon garlic powder</li>
+            <li>1 teaspoon salt</li>
+            <li>1 teaspoon ground black pepper</li>
+            <li>1 cup barbecue sauce, divided</li>
+        </ul>
+        <h3>Directions</h3>
+        <h3>Step 1</h3>
+            <p>Gather all ingredients.</p>
+            <img width="480" height="360" src="../img/tenderloin_step1.webp">
+        <h3>Step 2</h3>
+            <p>Preheat an outdoor grill for medium, indirect heat and lightly oil the grate.</p>
+        <h3>Step 3</h3>
+            <p>Season tenderloins with garlic powder, salt, and pepper. Place 1/2 of the barbecue sauce into a small bowl for basting; set aside remaining barbecue sauce for serving.</p>    
+            <img width="480" height="360" src="../img/tenderloin_step3.webp">
+        <h3>Step 4</h3>
+            <p>Cook pork on the preheated grill over indirect heat for 30 minutes.</p>
+            <img width="480" height="360" src="../img/tenderloin_step4.webp">
+        <h3>Step 5</h3>    
+            <p>Brush pork with barbecue sauce, turn, and brush again, using all sauce in the small bowl. Continue cooking until an instant-read thermometer inserted into the center reads 145 degrees F (63 degrees C), about 15 more minutes. Let pork rest for 10 minutes.</p>
+            <img width="480" height="360" src="../img/tenderloin_step5.webp">
+        <h3>Step 6</h3>    
+            <p>Slice pork and serve with reserved barbecue sauce.</p>
     </body>
 </html>
