--- a/recipes/tenderloin.html
+++ b/recipes/tenderloin.html
@@ -54,5 +54,6 @@
             <img width="480" height="360" src="../img/tenderloin_step5.webp">
         <h3>Step 6</h3>    
             <p>Slice pork and serve with reserved barbecue sauce.</p>
+        <h4><a href="../index.html">Return to main page</a></h4>
     </body>
 </html>
