fix typo and header type

--- a/recipes/tenderloin.html
+++ b/recipes/tenderloin.html
@@ -38,22 +38,22 @@
             <li>1 cup barbecue sauce, divided</li>
         </ul>
         <h3>Directions</h3>
-        <h3>Step 1</h3>
+        <h4>Step 1</h4>
             <p>Gather all ingredients.</p>
             <img width="480" height="360" src="../img/tenderloin_step1.webp">
-        <h3>Step 2</h3>
+        <h4>Step 2</h4>
             <p>Preheat an outdoor grill for medium, indirect heat and lightly oil the grate.</p>
-        <h3>Step 3</h3>
+        <h4>Step 3</h4>
             <p>Season tenderloins with garlic powder, salt, and pepper. Place 1/2 of the barbecue sauce into a small bowl for basting; set aside remaining barbecue sauce for serving.</p>    
             <img width="480" height="360" src="../img/tenderloin_step3.webp">
-        <h3>Step 4</h3>
+        <h4>Step 4</h4>
             <p>Cook pork on the preheated grill over indirect heat for 30 minutes.</p>
             <img width="480" height="360" src="../img/tenderloin_step4.webp">
-        <h3>Step 5</h3>    
+        <h4>Step 5</h4>    
             <p>Brush pork with barbecue sauce, turn, and brush again, using all sauce in the small bowl. Continue cooking until an instant-read thermometer inserted into the center reads 145 degrees F (63 degrees C), about 15 more minutes. Let pork rest for 10 minutes.</p>
             <img width="480" height="360" src="../img/tenderloin_step5.webp">
-        <h3>Step 6</h3>    
+        <h4>Step 6</h4>    
             <p>Slice pork and serve with reserved barbecue sauce.</p>
-        <h4><a href="../index.html">Return to main page</a></h4>
+        <h4><a href="../index.html">Return to Main Page</a></h4>    
     </body>
 </html>
